fix: mobile testbench overflowing

--- a/examples/testbench/src/styles/globals.css
+++ b/examples/testbench/src/styles/globals.css
@@ -96,7 +96,10 @@ code {
 
 @media screen and (max-width: 768px) {
   main {
+    display: flex;
+    flex-direction: column;
     padding: 32px;
+    overflow: hidden;
   }
   aside {
     z-index: 1;
